--- a/articulo.html
+++ b/articulo.html
@@ -34,7 +34,7 @@
                             <li><a href="#calderon"><i class="fas fa-volleyball-ball"></i>Vicente Calderón</a></li>
                             <li class="menu-selected"><a href="#benito" class="text-menu-selected"><i class="fas fa-baseball-ball"></i>Benito Villamarín</a></li>
                             <li><a href="#anfield"><i class="fas fa-passport"></i>Anfield</a></li>
-                            <li><a href="#contacto"><i class="fas fa-headset"></i>Contacto</a></li>
+                            <li><a href="animacion.html"><i class="fas fa-headset"></i>Animación</a></li>
                         </ul>
                     </nav>
 
